<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_porter">Porter</string>
    <string name="menu_vehicle">Vehicle</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
</resources>
