<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/house"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_Porter"
                android:icon="@drawable/man"
                android:title="@string/menu_porter"/>
        <item
                android:id="@+id/nav_vehicle"
                android:icon="@drawable/car"
                android:title="@string/menu_vehicle"/>
        <item
                android:id="@+id/nav_invoice"
                android:icon="@drawable/invoice"
                android:title="@string/menu_invoice"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="@string/menu_share"/>-->
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/exit"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
